compiler/tests/fa/errors/pure_ref_param.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع افزا(مقدار &: صحیح) : صحیح:
    بازگشت مقدار + 1
پایان

تابع اصلی:
    چاپ(1)
پایان
